# Charlee

./: .dockerignore  .env.production.example  .gitignore  .pre-commit-config.yaml  ADVANCED_AUTH_FEATURES.md  ANALISE_QUALIDADE.md  AUTHENTICATION_MIGRATION_GUIDE.md  CONTRIBUTING.md  Charlee_Documentacao.docx.txt  DEPLOYMENT.md  DOCS_INDEX.md  Dockerfile  MODULES_STATUS.md  NOTIFICATION_SYSTEM_SUMMARY.md  PROJECT_STATUS.md  QUALITY_ROADMAP.md  QUALITY_STANDARDS.md  QUICKSTART.md  README.md  SETUP.md  STATUS_PROJETO.md  VERIFICATION_CHECKLIST.md  check-ci.sh  docker-compose.yml  info_charlee.txt  render.yaml
backend/: .dockerignore  .env.example  .gitignore  AUTHENTICATION_GUIDE.md  CI_CHECK.md  Dockerfile  Makefile  QUICKSTART.md  QUICKSTART_CELERY.md  QUICK_START.md  README.md  SETUP.md  alembic.ini  celery_app.py  check-ci.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  seed_data.sql  seed_database.py  setup.sh  setup_database.py  test_setup.py
backend/agent/: ORCHESTRATOR_README.md  core_agent.py  orchestrator.py
backend/api/: SECURITY_SANITIZATION.md  cache.py  main.py  rbac.py  security.py  websockets.py
backend/database/: config.py  crud.py  models.py  schemas.py  seed_default_user.py
backend/docs/: CELERY_SETUP.md
backend/events/: calendar_events.py
backend/integration/: __init__.py  capacity_integration.py  context_manager.py  event_bus.py  event_types.py  notification_listener.py  task_wellness_integration.py
backend/integrations/: google_calendar.py  microsoft_calendar.py
backend/multimodal/: README.md  (+2 more)
(+251 files in other folders)
